# flatgeographbuf

./: README.md  package.json  rollup.config.js
.github/workflows/: test.yml
doc/: format-spec.md  usage-examples.md
src/rust/: CHANGELOG.md  Cargo.toml
src/rust/src/: packed_r_tree.rs
src/ts/: README.md  array-reader.ts  constants.ts  flatgeographbuf.ts  geojson.spec.ts  geojson.ts  graph-types.ts  graph.spec.ts  graph.ts  http-reader.ts
src/ts/generic/: featurecollection.ts
src/ts/geojson/: featurecollection.ts
