[package]
name = "flatgeobuf"
version = "6.0.1"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
description = "FlatGeobuf for Rust"
homepage = "https://flatgeobuf.org/"
repository = "https://github.com/flatgeobuf/flatgeobuf/tree/master/src/rust"
readme = "README.md"
documentation = "https://docs.rs/flatgeobuf/"
license = "BSD-2-Clause"
keywords = ["geo", "r-tree", "spatial"]
rust-version = "1.85.0"

[features]
default = ["http", "default-tls"]
http = ["http-range-client", "bytes", "reqwest"]
default-tls = ["http-range-client?/default-tls"]

[dependencies]
# chore: FlatBuffers does not follow SemVer, but rather uses a format of the date of the release.
# So we should match versions exactly and bump only explicitly.
# Updates are typically synchronized across all FGB clients, and codegen should be rerun after updating.
flatbuffers = "=24.12.23"
byteorder = "1.5.0"
geozero = { version = "0.15.1", default-features = false }
geo-traits = "0.3"
http-range-client = { version = "0.9.0", optional = true, default-features = false, features = [
    "reqwest-async",
] }
bytes = { version = "1.11.0", optional = true }
log = "0.4.29"
fallible-streaming-iterator = "0.1.9"
tempfile = "3.24.0"
reqwest = { version = "0.12.28", optional = true, default-features = false }

[dev-dependencies]
geozero = { version = "0.15.1", default-features = true }
seek_bufread = "1.2.2"
rand = "0.9.2"
hex = "0.4.3"
criterion = { version = "0.8.1", features = ["async_tokio"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
# One test needs SSL support; just use the default system bindings for that.
reqwest = { version = "0.12.28", default-features = true }
geo-types = "0.7.18"
yocalhost = "0.5.0"
async-trait = "0.1.89"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "http_read"
harness = false

[[bench]]
name = "geojson"
harness = false

# [patch.crates-io]
# # Patch geozero dependencies (dev only)
# geozero = { path = "../../../geozero/geozero" }
# geozero = { git = "https://github.com/georust/geozero", branch = "release/v0.12.0" }

[package.metadata.docs.rs]
all-features = true
